--- a/inventory/host_vars/smtp.gnome.org
+++ b/inventory/host_vars/smtp.gnome.org
@@ -16,7 +16,7 @@ dovecot_ldap_bind_userdn: uid=%n,cn=users,cn=accounts,dc=gnome,dc=org
 dovecot_ldap_base: cn=users,cn=accounts,dc=gnome,dc=org
 dovecot_ldap_tls_cacert_path: /etc/ipa/ca.crt
 dovecot_ldap_user_attrs: uidNumber=uid,gidNumber=gid
-dovecot_ldap_user_filter: (&(objectclass=person)(uid=%n)(!(uid=zana))(|(memberOf=cn=staffmail,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=foundation,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=emeritus,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=mailgrace,cn=groups,cn=accounts,dc=gnome,dc=org)))
+dovecot_ldap_user_filter: (&(objectclass=person)(uid=%n)(|(memberOf=cn=staffmail,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=foundation,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=emeritus,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=mailgrace,cn=groups,cn=accounts,dc=gnome,dc=org)))
 dovecot_mail_privileged_group: staffmail
 dovecot_ssl: true
 dovecot_ssl_cert_path: /etc/letsencrypt/live/smtp.gnome.org/fullchain.pem
